--- a/DotStark_LLP/web.config
+++ b/DotStark_LLP/web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="CMSConnectionString" connectionString="Data Source=DST-11;Initial Catalog=Dotstark_LLP_DB_27-10-2021;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=sa;Connect Timeout=60;Encrypt=False;Current Language=English;" />
+  <add name="CMSConnectionString" connectionString="Server=tcp:sqldevseer.database.windows.net,1433;Initial Catalog=k13_DotStark_25-11-2021;Persist Security Info=False;User ID=dev;Password=Abcd@1121;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />   
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
