--- a/DotStark_LLP/web.config
+++ b/DotStark_LLP/web.config
@@ -20,6 +20,8 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" maxUrlLength="512" />
+	<customErrors mode="Off"/>
+	 <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
