--- a/DotStark_LLP/Views/web.config
+++ b/DotStark_LLP/Views/web.config
@@ -41,7 +41,7 @@
   </system.webServer>
 
   <system.web>
-   <customErrors mode="Off"/>
+   <!-- <customErrors mode="Off"/> -->
    <!-- <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/> -->
     <compilation>
       <assemblies>
