--- a/DotStark_LLP/bin/DotStark_LLP.dll.config
+++ b/DotStark_LLP/bin/DotStark_LLP.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="CMSConnectionString" connectionString="Data Source=DST-11;Initial Catalog=Dotstark_LLP_DB_27-10-2021;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=sa;Connect Timeout=60;Encrypt=False;Current Language=English;" />
+  <add name="CMSConnectionString" connectionString="Server=tcp:sqldevseer.database.windows.net,1433;Initial Catalog=Dotstark_LLP_DB_27-10-2021;Persist Security Info=False;User ID=dev;Password=Abcd@1121;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />   
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -19,7 +19,10 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" maxUrlLength="512" />
+    <httpRuntime targetFramework="4.6.1" maxUrlLength="512" />	
+	<customErrors mode="Off">
+      <error statusCode="500" redirect="~/CMSMessages/Error.aspx" />
+    </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
